Bug 77027 - ODF import: line color / fill color of embedded objects (like Math Formula) lost when importing document written by LO 4.0/4.1/4.2
Summary: ODF import: line color / fill color of embedded objects (like Math Formula) l...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
4.2.3.2 rc
Hardware: Other All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: odf target:4.3.0 target:4.2.4
Keywords: regression
Depends on:
Blocks: mab4.2
  Show dependency treegraph
 
Reported: 2014-04-03 19:47 UTC by Laurent Balland
Modified: 2014-04-22 13:52 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Test file with a Math formula object with Area set to orange color (12.92 KB, application/vnd.oasis.opendocument.presentation)
2014-04-03 19:47 UTC, Laurent Balland
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Laurent Balland 2014-04-03 19:47:53 UTC
Created attachment 96873 [details]
Test file with a Math formula object with Area set to orange color

Problem description: In Impress, Math objects lost their Area properties when saved with LibO 4.2.3 RC2. Regression against 4.2.3 RC1

Steps to reproduce:
1. Create a new presentation
2. Insert a Math object: Insert > Object > Formula
3. Type dummy formula and hit Esc
5. Change Area (right click > Area) to something different from none (color, gradient, hatching or bitmap)
6. Save file
Formula looks OK with its area
7. File > Reload

Current behavior:
Formula has Area set to "None"

Expected behavior:
Formula should keep its Area settings.

If attached file (build with LibO 4.2.3.1) is open with LibO 4.2.3.2, Formula has orange color as Area (ok). Then save with LibO 4.2.3.2 and reopen with LibO 4.2.3.2 or LibO 4.2.3.1 Formula lost its Area. Pb occurred during Save operation.
Comment 1 Laurent Balland 2014-04-06 09:31:27 UTC
Confirmed with LibO 4.2.3 RC3
Build ID: 6c3586f855673fa6a1576797f575b31ac6fa0ba3
Comment 2 Laurent Balland 2014-04-06 19:22:21 UTC
Confirmed on Linux OpenSuse 13.1 with Version: 4.2.3.3
Build ID: 6c3586f855673fa6a1576797f575b31ac6fa0ba3

Same occurs in Calc and Draw (not Writer, because Formula has no Are menu entry).

Same occurs with chart:
1. Create a new presentation
2. Insert > Chart
3. Click outside to close default chart
4. Right click on chart > Area, Fill = color
5. Save file
6. Reload
=> Area is set to none
Comment 4 Michael Stahl 2014-04-15 21:18:37 UTC
that's weird... for me the exact opposite of the description is true:

in 4.2.3.2, creating a formula from scratch with Area and save/reload,
the Area is loaded properly.

in 4.2.3.2, loading the attachment, the Area is _not_ loaded properly
(whereas 4.2.3.1 shows the Area in this file properly).

that at least looks like a bug.... and reverting bc06737408a840daad981c95799d9da92cf2ef0a makes a difference.

very odd, the content.xml of the attachment and a document
stored by 4.2.3.2 don't look obviously different...
Comment 5 Michael Stahl 2014-04-15 22:37:55 UTC
oops, there was already a user of LO_4x, and that one now applies to LO 4.0/4.1/4.2 which was never intended...

and also, the version check does not work for LibreOfficeDev,
only for release builds that are called LibreOffice, and that is
why i couldn't reproduce the description (see comment #4).

fixed on master
Comment 6 Commit Notification 2014-04-15 22:38:56 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=25a2eab22798373b8197f1e594568207eb7c5039

fdo#77027: ODF import: fix wrong version in check for embedded objects



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2014-04-16 10:55:13 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=426077fbea57facf9907cff2431d8f669713d6da

fdo#77027: add some comments to prevent such oversights



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2014-04-16 12:16:00 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=192963c3c1959389cb78e80bbc3e22e49fabcc73&h=libreoffice-4-2

fdo#77027: ODF import: fix wrong version in check for embedded objects


It will be available in LibreOffice 4.2.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2014-04-22 13:52:16 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-2-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e04b47ef73247607aa05d1c875557f0cce896df7&h=libreoffice-4-2-4

fdo#77027: ODF import: fix wrong version in check for embedded objects


It will be available already in LibreOffice 4.2.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.