fdo#77027: ODF import: fix wrong version in check for embedded objects

SvXMLImport::LO_4x does not mean 4.0+ any more.

(regression from 92cb21ebeda98c5193c50c4cf7ef3d60611c2a52)

Change-Id: Ib444762c2d6e4d051e99962eaff1b1ed34af983a